vertical align middle fix (perhaps this should stay somewhere else)

--- a/tools/themes/moveColorize.css
+++ b/tools/themes/moveColorize.css
@@ -2,6 +2,7 @@
 
 body.lichessTools.lichessTools-theme_moveColorize comment {
   font-style: italic;
+  vertical-align: middle;
 }
 
 body.lichessTools.lichessTools-theme_moveColorize div.tview2>move {
